fix overflow x

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body,
 html {
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
+  overflow-x: hidden;
 }
 
 #dash-bkgd {
